# gsupload-python

./: .gitignore  CHANGELOG.md  PERFORMANCE.md  README.md  gsupload.json.example  hosts.example.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  BLOG_POST.md  LINKEDIN_POST.md  PERFORMANCE.md  PRESENTATION_POST.md  USER_MANUAL.md
src/: gsupload.py
src/gsupload/: __init__.py  cli.py  config.py  excludes.py  tree.py  utils.py
src/gsupload/protocols/: __init__.py  ftp.py  sftp.py
tests/: conftest.py  test_cli.py  test_config.py  test_excludes.py  test_protocols_ftp.py  test_protocols_sftp.py  test_tree.py  test_utils.py
