[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsupload"
version = "0.2.0"
description = "Sync/upload files and folders to FTP/SFTP hosts using host aliases"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.0",
  "paramiko>=3.0.0",
]

[project.scripts]
gsupload = "gsupload:main"

[project.optional-dependencies]
dev = [
    "commitizen"
]

[tool.setuptools]
py-modules = ["gsupload"]

[tool.setuptools.package-dir]
"" = "src"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
