[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsupload"
version = "1.0.1b2"
description = "Sync/upload files and folders to FTP/SFTP hosts using host aliases"
requires-python = ">=3.9"
dependencies = ["click>=8.1.0", "paramiko>=3.0.0"]

[project.scripts]
gsupload = "gsupload.cli:main"

[project.optional-dependencies]
dev = ["commitizen", "pre-commit", "pytest>=8.0.0", "pytest-cov>=4.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
breaking_change_exclamation_in_title = true
version_files = [
  "pyproject.toml:version",
  "src/gsupload/__init__.py:__version__",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
